section-zoom: fixed grid overflow-y

--- a/style/section-zoom.css
+++ b/style/section-zoom.css
@@ -9,9 +9,9 @@
 
 .grid-container {
     width: 100%;
-
+    height: 100%;
     display: grid;
-    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+    grid-template: repeat(2, 50%) / repeat(2, 1fr);
     align-items: center;
     justify-content: center;
     align-content: stretch;
